# upstageailab-ocr-recsys-competition-ocr-2

./: .cursorignore  .dockerignore  .gitattributes  .gitignore  .grok-linter.yaml  .mcp-telemetry.jsonl  .pre-commit-config.yaml  .repomixignore  AGENTQMS_TOOLS_AUDIT.md  AGENTS.md  AGENTS.yaml  AGENT_ENTRY.md  ARCHITECTURE_RESTORATION_SUMMARY.md  BRANCH_COMPARISON.md  BUGFIX_SUMMARY.txt  CHANGELOG.md  CHECK_LOGS.sh  CLAUDE.md  CLEANUP_SUMMARY_2026-01-19.md  COMMIT_ANALYSIS_DUAL_ARCHITECTURE.md  CONTRIBUTING.md  DEBUGGING_TOOLKIT.md  HANDOVER_INDEX.txt  INFERENCE_CRASH_SUSPECTS.md  Legacy_Scripts_Cleanup_Recommendations.md  MERGE_PLAN.md  MERGE_SUMMARY.md  MIGRATION_CHECKLIST.md  MIGRATION_COMPLETE.md  MIGRATION_STATUS.md  Makefile  NUCLEAR_REFACTOR_HANDOVER.md  OCR_DIRECTORY_COMPARISON.md  PERSPECTIVE_CORRECTION_STATUS.md  PHASE_1_HANDOFF.md  PHASE_2_COMPLIANCE_ANALYSIS.md  PHASE_2_SESSION_HANDOVER.md  PIPELINE_ARCHITECTURE_TRUTH.md  PR_BODY.md  Performance_Audit_OCR_Training_Pipeline_Bottlenecks_1.md  (+79 more)
.agentqms/: USAGE_GUIDE.md  effective.yaml  settings.yaml
.ai-instructions/: INDEX.yaml
.claude/: project_instructions.md  settings.local.json
.cursor/: instructions.md
.devcontainer/: CLOUD_SETUP_FIXES.md  CODESPACES_SETUP.md  MAKE_IMAGE_PUBLIC.md  MCP_CLAUDE_CODE.md  README.md  devcontainer.cloud.json  devcontainer.json  mcp_config.json  mcp_servers.yaml
.gemini/: agent_instructions.md  agent_usage_guide.md
.github/: copilot-instructions.md
.hydra/: config.yaml  hydra.yaml  overrides.yaml
.pre-commit-hooks/: architecture_guardian.py
.qwen/: QWEN.md  QWEN.yaml  README-chat-integration.md  README.md  consolidate.py  fix_batch1_batch2.py  manual_validate.sh  prompts.md  qwen-chat.sh  run.sh  run_improved.sh  settings.json
AgentQMS/: .mcp-telemetry.jsonl  AGENTS.yaml  CHANGELOG.md  DEPRECATION_PLAN.md  FIXED.md  MCP_SERVER.md  MIGRATION_GUIDE.md  README.md  __init__.py  cli.py  context-bundle-walkthrough.md  context-tooling-2.0-plan.md  mcp_schema.yaml  mcp_server.py
__DEBUG__/: functional-purity-audit-standards.md  scratchpad.md
__NEW__/: .gitignore
ablation_study/: run_ablation.py
agent-debug-toolkit/: AI_USAGE.yaml  README.md  draft-research-snippets-1.md  draft-research-snippets-2.md  pyproject.toml  run_mcp.sh  session_handover_ast_phase2.md
agent-debug-toolkit/src/agent_debug_toolkit/: __init__.py  astgrep.py  cli.py  edits.py  mcp_server.py  router.py  treesitter.py
agent-debug-toolkit/src/agent_debug_toolkit/analyzers/: __init__.py  base.py  complexity_metrics.py  config_access.py  context_tree.py  dependency_graph.py  duplication_detector.py  hydra_config_resolver.py  hydra_usage.py  import_tracker.py  instantiation.py  intelligent_search.py  merge_order.py  security_scanner.py  type_inference.py
agent-debug-toolkit/src/agent_debug_toolkit/config/: tools.yaml
agent-debug-toolkit/src/agent_debug_toolkit/precomputes/: __init__.py  symbol_table.py
agent-debug-toolkit/src/agent_debug_toolkit/reporters/: __init__.py  json_reporter.py  markdown_reporter.py
agent-debug-toolkit/tests/: __init__.py  test_astgrep.py  test_complexity_metrics.py  test_config_access.py  test_dependency_graph.py  test_duplication_detector.py  test_edits.py  test_hydra_config_resolver.py  test_hydra_usage.py  test_import_tracker.py  test_instantiation.py  test_merge_order.py  test_security_scanner.py  test_symbol_table.py  test_treesitter.py  test_type_inference.py
agent-debug-toolkit/tests/fixtures/: sample_code.py
agent_qms/: README_auto_generate_index.md  __init__.py  __main__.py  adoption_and_usage_guide.md  q-manifest.yaml  quality_management_framework.md
airflow-batch-processor/: .env.example  .gitignore  AI_OPS.json  AUTHENTICATION.md  HANDOVER.md  README.md  dag_runs.json  requirements.txt
analysis/: COMPLETE_IMPLEMENTATION_PATH.md  PHASE_2_CONTEXT_BUNDLING_PLAN.md  PHASE_2_QUICK_CHECKLIST.md  PHASE_2_SUMMARY.md  UTILITY_CATALOG_GENERATED.txt  UTILITY_DISCOVERY_ANALYSIS_INDEX.md  UTILITY_DISCOVERY_DECISION_MATRIX.md  UTILITY_DISCOVERY_EXECUTIVE_SUMMARY.md  UTILITY_DISCOVERY_VISUAL_SUMMARY.md  UTILITY_SCRIPTS_DISCOVERY_REQUIREMENTS.md  component_factories.json  configs_structure_before.txt  file_count_before.txt  hydra_entry_points.json  metrics_comparison.md  phase0_summary.md  phase8_cicd_audit.md  project_completion_summary.md
archive/ocr-etl-pipeline/: pyproject.toml
artifacts/: MASTER_INDEX.md
aws/: batch-job-definition.json  config.env
aws-batch-processor/: .gitignore  INDEX.yaml  PROCESSING_COMMANDS.md  README.md  SETUP_COMPLETE.md  script_catalog.yaml  setup-aws.sh
configs/: README.md  base.yaml  cache_performance_test.yaml  eval.yaml  main.yaml  predict.yaml  predict_shadow_removal.yaml  test.yaml  train.yaml  train_kie.yaml  train_kie_aihub_only.yaml  train_kie_baseline_optimized_v2.yaml  train_parseq.yaml  train_v2.yaml
configs_backup_20260117_193248/: predict.yaml  synthetic.yaml
data/: data_catalog.yaml
docker/: .bashrc  CHANGELOG_cudnn.md  Dockerfile  Dockerfile.cpu  Dockerfile.vlm  Makefile  docker-compose.str-pdf.yml  docker-compose.vllm-server.yaml  docker-compose.vlm.yml  docker-compose.yml
docs/: AGENTQMS_MAINTENANCE.md  CHANGELOG.md  CI_AUTOMATION_PLAN.md  CI_FIX_IMPLEMENTATION_PLAN.md  CI_OPTIMIZATION_RECOMMENDATIONS.md  CODESPACES_SETUP.md  CODESPACES_USAGE_ANALYSIS.md  DOCUMENTATION_ARCHITECTURE.md  HIGH_PERFORMANCE_PLAYGROUND.md  LINTING_AUTOMATION.md  PERFORMANCE_TRAINING_STARTUP.md  PERSPECTIVE_CORRECTION_CONFIGURATION.md  PERSPECTIVE_CORRECTION_SUMMARY.md  PHASE_2_COMPLETION_SUMMARY.md  PRECOMMIT_GUIDE.md  QUICK_FIXES.md  README.md  README_ENHANCEMENTS.md  TRANSLATION_STRATEGY.md  aws-batch-quickref.md  index.md  migration_plan_underscore_naming.md  process_management.md  roadmap.md  sitemap.md
experiment-tracker/: CHANGELOG.md  Makefile  README.md  WORKFLOW_IMPROVEMENTS_SUMMARY.md  etk.py
experiment_manager/: AGENTS.yaml  MCP_SERVER.md  Makefile  etk.py  install-etk.sh  mcp_schema.yaml  mcp_server.py
experiment_manager_deprecated/: README.md  __init__.py  agent_interface.yaml  cli.py  core.py  database.py  (+1 more)
(+4885 files in other folders)
