[project]
name = "agent-debug-toolkit"
version = "0.1.0"
description = "AST-based debugging toolkit for AI agents to analyze Hydra/OmegaConf configuration patterns"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "AI Agent Toolkit", email = "toolkit@example.com"}
]
keywords = ["ast", "debugging", "hydra", "omegaconf", "ai-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
]

dependencies = []

[project.optional-dependencies]
cli = ["typer>=0.9.0"]
mcp = ["mcp>=0.9.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]
all = ["agent-debug-toolkit[cli,mcp,dev]"]

[project.scripts]
adt = "agent_debug_toolkit.cli:main"
adt-mcp = "agent_debug_toolkit.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_debug_toolkit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
