[project]
name = "ocr-etl-pipeline"
version = "0.1.0"
description = "A resumable, multi-threaded ETL pipeline for creating OCR LMDB datasets."
requires-python = ">=3.8"
dependencies = [
    "lmdb>=1.4.1",
    "opencv-python>=4.8.0",
    "tqdm>=4.66.0",
    "typer[all]>=0.9.0",
]

[project.scripts]
ocr-etl = "etl.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/etl"]
